Add Chapter 8 exercise.

--- a/index.html
+++ b/index.html
@@ -149,10 +149,9 @@ layout: page
     <a href="source/head-first-ruby-ch08-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch08.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     Ever sent an email to the wrong contact? You probably had a hard time sorting out the confusion that ensued. Well, Ruby objects are <em>just like those contacts</em> in your address book, and calling methods on them is like <em>sending messages</em> to them. If your address book gets mixed up, it’s possible to send messages to the wrong object. This chapter will help you <em>recognize the signs</em> that this is happening, and help you get your programs running <em>smoothly</em> again.
