Add Chapter 9 exercise.

--- a/index.html
+++ b/index.html
@@ -167,10 +167,9 @@ layout: page
     <a href="source/head-first-ruby-ch09-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch09.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     You can only inherit methods from <em>one</em> class. But what if you need to share <em>several sets of behavior</em> across several classes? Like methods for starting a battery charge cycle and reporting its charge level—you might need those methods on phones, power drills, and electric cars. Are you going to create a single superclass for all of those? (It won’t end well if you try.) Or methods for starting and stopping a motor. Sure, the drill and the car might need those, but the phone won’t!
