--- a/index.html
+++ b/index.html
@@ -188,10 +188,9 @@ layout: page
     <a href="source/head-first-ruby-ch10-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch10.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     You’ve seen that mixins can be useful. But you haven’t seen their full power yet. The Ruby core library includes two mixins that will <em>blow your mind</em>.
