Add Chapter 11 exercise.

--- a/index.html
+++ b/index.html
@@ -212,10 +212,9 @@ layout: page
     <a href="source/head-first-ruby-ch11-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch11.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     There’s an old saying: “Give someone a fish, and you feed them for a day. Teach them how to fish, and you feed them for a lifetime.” We’ve been <em>giving you fish</em> so far. We’ve shown you how to use a few of Ruby’s classes and modules. But there are dozens more, some of them applicable to your problems, that we don’t have room to cover. So it’s time to <em>teach you how to fish</em>. There’s excellent <strong>documentation</strong> freely available on all of Ruby’s classes, modules, and methods. You just have to know where to find it, and how to interpret it. That’s what this chapter will show you.
