Add Chapter 13 exercises.

--- a/index.html
+++ b/index.html
@@ -251,10 +251,9 @@ layout: page
     <a href="source/head-first-ruby-ch13-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch13.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     Are you sure your software is working right now? <em>Really</em> sure? Before you sent that new version to your users, you presumably tried out the new features to ensure they all worked. But did you try the old features to ensure you didn’t break any of them? <em>All</em> the old features? If that question makes you uneasy, your program needs automated testing. Automated tests ensure your program’s components work correctly, even after you change your code.
