Add Sinatra exercises.

--- a/index.html
+++ b/index.html
@@ -272,10 +272,9 @@ layout: page
     <a href="source/head-first-ruby-ch15-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch1415.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     This is the 21st century. Users want web apps. Ruby’s got you covered there, too! Libraries are available to help you host your own web applications and make them accessible from any web browser. So we’re going to spend these final two chapters of the book showing you how to build a full web app.
