Enable sample download buttons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@ layout: page
     <div class="title">Syntax Basics</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch01-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -31,10 +30,9 @@ layout: page
     <div class="title">Conditionals and Loops</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch02-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -54,10 +52,9 @@ layout: page
     <div class="title">Functions</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch03-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -74,10 +71,9 @@ layout: page
     <div class="title">Packages</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch04-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -97,10 +93,9 @@ layout: page
     <div class="title">Arrays</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch05-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -117,10 +112,9 @@ layout: page
     <div class="title">Slices</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch06-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -137,10 +131,9 @@ layout: page
     <div class="title">Maps</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch07-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -160,10 +153,9 @@ layout: page
     <div class="title">Structs</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch08-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -180,10 +172,9 @@ layout: page
     <div class="title">Defined Types</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch09-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -203,10 +194,9 @@ layout: page
     <div class="title">Encapsulation and Embedding</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch10-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -226,10 +216,9 @@ layout: page
     <div class="title">Interfaces</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch11-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -249,10 +238,9 @@ layout: page
     <div class="title">Recovering from Failure</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch12-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -269,10 +257,9 @@ layout: page
     <div class="title">Goroutines and Channels</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch13-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -289,10 +276,9 @@ layout: page
     <div class="title">Automated Testing</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch14-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -309,10 +295,9 @@ layout: page
     <div class="title">Web Apps</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch15-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -332,10 +317,9 @@ layout: page
     <div class="title">HTML Templates</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-ch16-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
     <div class="button more-exercises">
       <span>More Exercises</span>
       <div class="comingsoon"><br/>Coming Soon!</div>
@@ -355,10 +339,9 @@ layout: page
     <div class="title">Opening Files</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-other-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Some programs need to write data to files, not just read data.</b> Throughout the book, when we've wanted to work with files, you had to create them in your text editor for your programs to read. But some programs generate data, and when they do, they need to be able to <em>write data to a file</em>.
@@ -374,10 +357,9 @@ layout: page
     <div class="title">Six Things We Didn’t Cover</div>
   </div>
   <div class="buttons">
-    <div class="button">
+    <a href="source/head-first-go-other-code.zip" class="button">
       <span>Code Samples</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>We've covered a lot of ground!</b> We'll miss you, but before you go, we wouldn't feel right about sending you out into the world without a little more preparation. We've saved <em>six important topics</em> for this appendix.
