Add chapter 1 exercises

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ layout: page
     <a href="source/head-first-go-ch01-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch01.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Are you ready to turbo-charge your software?</b> Do you want a simple programming language that <em>compiles fast</em>? That <em>runs fast</em>? That makes it <em>easy</em> to distribute your work to users? Then you're ready for Go!
