Add Chapter 2 exercise on calling methods

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@ layout: page
     <a href="source/head-first-go-ch02-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch02.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Every program has parts that only apply in certain situations.</b> "This code should run <em>if</em> there's an error. <em>Otherwise</em>, that code should run." Almost every program contains code that should be run only when a certain <em>condition</em> is true. So almost every programming language provides <code>if</code> statements that let you determine whether to run segments of code. Go is no exception.
