Add ch03 exercises to front page

--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@ layout: page
     <a href="source/head-first-go-ch03-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch03.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>It's your turn.</b> You've been calling functions like a pro. But the only functions you could call were the ones Go defined for you. In this chapter, we're going to show you how to <em>create your own functions</em>. We'll learn how to declare functions with and without parameters. We'll declare functions that return a single value, and we'll learn how to <em>return multiple values</em> so that we can indicate when there's been an error. And we'll learn about <em>pointers</em>, which allow us to make more memory-efficient function calls.
