Add ch04 exercises

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@ layout: page
     <a href="source/head-first-go-ch04-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch04.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>It's time to get organized.</b> So far, we've been throwing all our code together in a single file. As our programs grow bigger and more complex, that's going to quickly become a mess.
