--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@ layout: page
     <a href="source/head-first-go-ch05-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch05.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>A whole lot of programs deal with lists of things.</b> Lists of addresses. Lists of phone numbers. Lists of products. Go has two ways of storing lists built-in. This chapter will introduce the first: arrays. You'll learn about how to <em>create arrays</em>, how to <em>fill them with data</em>, and how to <em>get that data back</em> out again. Then you'll learn about processing all the elements in array, first the hard way with <code>for</code> loops, and then the <em>easy</em> way with <code>for ... range</code> loops.
