Start ch06 exercises

--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@ layout: page
     <a href="source/head-first-go-ch06-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch06.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>We've learned we can't add more elements to an array.</b> That's a real problem for our program, because we don't know in advance how many pieces of data our file contains. But that's where Go <em>slices</em> come in. Slices are a collection type that can <em>grow to hold additional items</em> — just the thing to fix our program! We'll also see how slices can provide an easier way for <em>users to provide data</em> to all your programs, and how they can help you write functions that are more <em>convenient to call</em>.
