--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@ layout: page
     <a href="source/head-first-go-ch07-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch07.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Throwing things in piles is fine, until you need to find something again.</b> You've already seen how to create lists of values using arrays and slices. You've seen how to apply the same operation to every value in an array or slice. But what if you need to <em>work with a particular item</em>? To find it, you'll have to start at the beginning of the array or slice, and look through Every. Single. Value.
