--- a/index.html
+++ b/index.html
@@ -149,10 +149,9 @@ layout: page
     <a href="source/head-first-go-ch08-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch08.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Sometimes you need to store more than one type of data.</b> We learned about slices, which store a list of values. Then we learned about maps, which map a list of keys to a list of values. But both of these data structures can only hold values of <em>one type</em>. Sometimes, you need to group together values of <em>several</em> types. Think of mailing addresses, where you have to mix street names (strings) with postal codes (integers). Or student records, where you have to mix student names (strings) with grade point averages (floating-point numbers). You can't mix value types in slices or maps. But you can if you use another type called a <em>struct</em>. We'll learn all about structs in this chapter!
