--- a/index.html
+++ b/index.html
@@ -167,10 +167,9 @@ layout: page
     <a href="source/head-first-go-ch09-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch09.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>There's more to learn about defined types.</b> In the previous chapter, we showed you how to define a type with a struct underlying type. What we <em>didn't</em> show you was that you can use <em>any type</em> as an underlying type.
