--- a/index.html
+++ b/index.html
@@ -188,10 +188,9 @@ layout: page
     <a href="source/head-first-go-ch10-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch10.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Mistakes happen.</b> Sometimes, your program will receive invalid data, from user input, a file you're reading in, or elsewhere. In this chapter, you'll learn about encapsulation: a way to <em>protect your struct type's fields</em> from that invalid data. That way you'll know your field data is <em>safe</em> to work with!
