--- a/index.html
+++ b/index.html
@@ -209,10 +209,9 @@ layout: page
     <a href="source/head-first-go-ch11-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch11.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Sometimes you don't care about the particular type of a value.</b> You don't care about <em>what it is</em>. You just need to know that it will be able to <em>do certain things</em>. That you'll be able to call certain methods on it. You don't care whether you have a <code>Pen</code> or a <code>Pencil</code>, you just need something with a <code>Draw</code> method. You don't care whether you have a <code>Car</code> or a <code>Boat</code>, you just need something with a <code>Steer</code> method.
