--- a/index.html
+++ b/index.html
@@ -230,10 +230,9 @@ layout: page
     <a href="source/head-first-go-ch12-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch12.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Every program encounters errors. You should plan for them.</b> Sometimes handling an error can be as simple as reporting it and exiting the program. But other errors may require <em>additional action</em>. You may need to close opened files or network connections, or otherwise clean up, so your program doesn't leave a mess behind. In this chapter, we'll show you how to <em>defer</em> cleanup actions so they happen <em>even when there's an error</em>. We'll also show you how to make your program <em>panic</em> in those (rare) situations where it's appropriate, and how to <em>recover</em> afterwards.
