--- a/index.html
+++ b/index.html
@@ -248,10 +248,9 @@ layout: page
     <a href="source/head-first-go-ch13-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch13.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Working on one thing at a time isn't always the fastest way to finish a task.</b> Some big problems can be broken into smaller tasks. <em>Goroutines</em> let your program <em>work on several different tasks at once</em>. Your goroutines can <em>coordinate their work</em> using <em>channels</em>, which let them <em>send data to each other</em> and <em>synchronize</em> so that one goroutine doesn't get ahead of another. Goroutines let you take full advantage of computers with multiple processors, so that your programs run as <em>fast as possible</em>!
@@ -267,10 +266,9 @@ layout: page
     <a href="source/head-first-go-ch14-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch14.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Are you sure your software is working right now? Really sure?</b> Before you sent that new version to your users, you presumably tried out the new features to ensure they all worked. But did you try the old features to ensure you didn’t break any of them? <em>All</em> the old features? If that question makes you worry, your program needs <em>automated testing</em>. Automated tests ensure your program’s components <em>work correctly</em>, even after you change your code. Go's <code>testing</code> package and <code>go test</code> tool make it easy to write automated tests, using only the skills that you've already learned!
