--- a/index.html
+++ b/index.html
@@ -284,10 +284,9 @@ layout: page
     <a href="source/head-first-go-ch15-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch15.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>This is the 21st century. Users want web apps.</b> Go’s got you covered there, too! The Go standard library includes packages to help you <em>host your own web applications</em> and make them <em>accessible from any web browser</em>. So we’re going to spend the final two chapters of the book showing you how to build web apps.
