Add text template exercise

--- a/index.html
+++ b/index.html
@@ -305,10 +305,9 @@ layout: page
     <a href="source/head-first-go-ch16-code.zip" class="button">
       <span>Code Samples</span>
     </a>
-    <div class="button more-exercises">
+    <a href="exercises/ch16.html" class="button">
       <span>More Exercises</span>
-      <div class="comingsoon"><br/>Coming Soon!</div>
-    </div>
+    </a>
   </div>
   <p>
     <b>Your web app needs to respond with HTML, not plain text.</b> Plain text is fine for e-mails and social media posts. But your pages need to be <em>formatted</em>. They need <em>headings</em> and <em>paragraphs</em>. They need <em>forms</em> where your users can submit data to your app. To do any of that, you need <em>HTML code</em>.
